syntax = "proto3";

package brain4j;

option java_package = "org.brain4j.core.importing.proto";
option java_outer_classname = "ProtoModel";

message Model {
  uint32 version = 1;
  string name = 2;
  string created = 3; // RFC-3339 timestamp
  repeated Layer layers = 4;
  repeated Tensor weights = 5;
  string loss_function = 6;
}

message Layer {
  map<string, AttrValue> attrs = 1;
  string name = 2;
  string type = 3;
  Clipper clipper = 4;
  Activation activation = 5;
  WeightInit weightInit = 6;
  oneof layer_kind {
    BasicLayer basic = 7;
    Transformer transformer = 8;
  }
}

message WeightInit {
  map<string, AttrValue> attrs = 1;
}

message Activation {
  map<string, AttrValue> attrs = 1;
}

message Clipper {
  map<string, AttrValue> attrs = 1;
}

message AttentionHead {
  Tensor q_weight = 1;
  Tensor k_weight = 2;
  Tensor v_weight = 3;
  map<string, AttrValue> attrs = 4;
}

message MultiHeadAttention {
  repeated AttentionHead heads = 1;
  map<string, AttrValue> attrs = 2;
  Tensor out_weight = 3;
}

message BasicLayer {
  uint32 dimension = 1; // 64, 128, ...
}

message Transformer {
  Layer up_projection = 1;
  Layer down_projection = 2;
  Layer normalizer_1 = 3;
  Layer normalizer_2 = 4;
  Layer dropout = 5;
  MultiHeadAttention attention = 6;
}

message AttrValue {
  oneof value {
    int32 int_val = 1;
    float float_val = 2;
    bool bool_val = 3;
    string string_val = 4;
  }
}

message Tensor {
  string name = 1;  // e.g. "denselayer_0.weight"
  repeated int32 shape = 2;  // e.g. [64,128]
  repeated float data = 3 [packed=true];
}
